--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                   <i class="fa fa-bars fa-2x"></i>
                 </div>
                 <div class="logo">
-                    Safi Sneakers
+                    Safi <span class="logo-title">Sneakers</span>
                 </div>
                 <div class="menu">
                     <ul>
@@ -34,5 +34,9 @@
         </div>
     </div>
     
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
