Added and styled image on who we are and texts

--- a/index.html
+++ b/index.html
@@ -27,10 +27,28 @@
                 </div>
             </nav>
         </header>
-        <div class="content">
-            <p>industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <div class="container">
+            <div class="who-we-are-header">
+                <h2>Who We Are</h2>
+            </div>
+            <div class="who-we-are-content">
+                <div class="who-we-are-img">
+                    <img src="images/cool-store.png" alt="Cool Store" width="">
+                </div>
+                <div class="who-we-are-text">
+                    <p>Safisneakers comes as an exclusive website to update you on the treading fashion on footawear in town with the latest brands fresh outlook everyday. Be the one to catch up with the new trends. Sneakers is all about brands</p>
+                </div>
+            </div>
+            <!-- End who we are -->
+
+            <div class="new-arrivals">
+                <h2>New Arivals</h2>
+            </div>
+            <div class="new-arivals-content">
+                <div class="new-arival-img-1">
+                    
+                </div>
+            </div>
         </div>
     </div>
     
