Added Partners and footer

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 </div>
                 <div class="menu">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Product</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="product.html">Product</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -68,8 +68,36 @@
             </div>
             <!-- End of New Arivals -->
 
-            
+            <div class="partners">
+                <h2>Our Partners</h2>
+            </div>
+            <div class="partners-content">
+                <div class="partners-img-1">
+                    <img src="images/partners/nike.jpg" alt="Nike">
+                </div>
+                <div class="partners-img-2">
+                    <img src="images/partners/partner_two.png" width="400" alt="Fit Hub">
+                </div>
+                <div class="partners-img-3">
+                    <img src="images/partners/partner_three.png" alt="Dripstone">
+                </div>
+            </div>
+            <!-- End Partners -->
+
         </div>
+        <footer>
+            <div class="container">
+                <div class="logo-footer">
+                    Safi <span class="logo-title">Sneakers</span>
+                </div>
+                <div class="social-icon">
+                    <i class="fa fa-phone fa-2x icons"></i>
+                    <i class="fa fa-whatsapp fa-2x"></i>
+                    <i class="fa fa-google fa-2x"></i>
+                </div>
+                <p class="copy">©Copyright. All rights reserved</p>
+            </div> 
+        </footer>
     </div>
     
 
