Added photo to team section and styled

--- a/about.html
+++ b/about.html
@@ -38,6 +38,30 @@
                     <p>Safisneakers has everything for you. From player exclusives, rare samples. Have the best and exclusive best quality sneakers at our stores. Our online shop is updated daily with new inventory and products for our customers to chose from.</p>
                 </div>
             </div>
+            <!-- finish about us -->
+
+            <div class="our-team-content">
+                <div class="our-team-header">
+                    <h2>Our Team</h2>
+                </div>
+                <div class="our-team-images">
+                    <div class="our-team-img-1">
+                        <img src="images/our team/team-1.jpg" width="300" alt="Team">
+                        <h2>Alexander Costa</h2>
+                        <p>Founder & CEO</p>
+                    </div>
+                    <div class="our-team-img-2">
+                        <img src="images/our team/team-2.jpg" width="300" alt="Team">
+                        <h2>Agusto Dasilva</h2>
+                        <p>Co Founder</p>
+                    </div>
+                    <div class="our-team-img-3">
+                        <img src="images/our team/team-3.jpg" width="300" alt="Team">
+                        <h2>Irene Mercy</h2>
+                        <p>Chief Admin</p>
+                    </div>
+                </div>
+            </div>
 
         </div>
         <footer>
