Added images on product and styled the layout

--- a/product.html
+++ b/product.html
@@ -29,8 +29,74 @@
         </header>
         <div class="container">
             <div class="product-content">
-                <div class="about-who-we-are">
-                    <h2>Our Services</h2>
+                <div class="product-header">
+                    <h2>Our Products</h2>
+                </div>
+                <div class="product-images-1">
+                    <div class="product-services-img-1">
+                        <img src="images/products/10p.png" alt="img">
+                        <p>Adidas Tubular Radial</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/11p.png" alt="img">
+                        <p>Nike Presto Air 700 DE</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/1p.png" alt="img">
+                        <p>Nike white</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/2p.png" alt="img">
+                        <p>Haurache Run Ultra DM</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                </div>
+                <div class="product-images-1">
+                    <div class="product-services-img-1">
+                        <img src="images/products/3p.png" alt="img">
+                        <p>Under Armuor Vixs DT</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/4p.png" alt="img">
+                        <p>Nike Air Haurache</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/5p.png" alt="img">
+                        <p>Nike Supreme Dot</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/6p.png" alt="img">
+                        <p>Nike Air Blue</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                </div>
+                <div class="product-images-1">
+                    <div class="product-services-img-1">
+                        <img src="images/products/7p.png" alt="img">
+                        <p>Under Armuor 7000 DE</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/8p.png" alt="img">
+                        <p>Jordan Air</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/14p.png" alt="img">
+                        <p>Jordan 9 Boot</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
+                    <div class="product-services-img-1">
+                        <img src="images/products/9p.png" alt="img">
+                        <p>Adidas Alphabounce</p>
+                        <button class="btn-custom" onclick="myFunction()">Buy Now</button>
+                    </div>
                 </div>
             </div>
             <!-- finish about us -->
