Modify contact layout

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                 <div class="contact-sub-title">
                     <h2 class="get-in">Get in Touch</h2>
                     <p>Address: Main Str, no 253, Kibera Center <br/>
-                        Phone: +254 779663469 <br/>
+                        Phone: +254 779663469/ +254748815593 <br/>
                         E-mail: music@gmail.com</p>
                 </div>
                 <div class="contact-form">
@@ -55,7 +55,6 @@
                     </form>
                 </div>
             </div>
-            <!-- finish contact -->
 
         </div>
         <footer>
