Added ContactAddress and also added amount on product

--- a/contact.html
+++ b/contact.html
@@ -31,26 +31,29 @@
             <div class="contact-content">
                 <div class="contact-sub-title">
                     <h2 class="get-in">Get in Touch</h2>
-                    <p>Address: Main Str, no 253, Kibera Center <br/>
-                        Phone: +254 779663469/ +254748815593 <br/>
-                        E-mail: music@gmail.com</p>
+                    <i class="fa fa-map-marker"> Address</i>
+                    <p>Main Str, no 08, Kibera Center </p>
+                    <i class="fa fa-phone"> Lets talk</i>
+                    <p>+254 779663469 / +254748815593 </p>
+                    <i class="fa fa-envelope"> General Support</i>
+                    <p>safisneakers@gmail.com </p>
                 </div>
                 <div class="contact-form">
                     <form class="form-group">
                         <div class="form-name">
-                          <label for="name">Full Names:</label>
-                          <input type="text" placeholder="Full Names">
+                          <label class="label" for="name">Full Names:</label>
+                          <input class="input-form" type="text" placeholder="Full Names">
                         </div>
                         <div class="form-name">
-                            <label for="name">Email:</label>
-                            <input type="text" placeholder="Email">
+                            <label class="label"  for="name">Email:</label>
+                            <input class="input-form-1" type="text" placeholder="Email">
                           </div>
                           <div class="form-name">
-                            <label for="name">Message:</label>
-                            <textarea name="message"></textarea>
+                            <label class="label"  for="name">Message:</label>
+                            <textarea class="input-form-2" name="message" placeholder="Enter your message"></textarea>
                           </div>
                           <div class="submit">
-                              <button>Submit</button>
+                              <button class="contact-button">Submit</button>
                           </div>
                     </form>
                 </div>
