--- a/product.html
+++ b/product.html
@@ -36,21 +36,25 @@
                     <div class="product-services-img-1">
                         <img src="images/products/10p.png" alt="img">
                         <p>Adidas Tubular Radial</p>
+                        <p class="amount">$ 250</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/11p.png" alt="img">
-                        <p>Nike Presto Air 700 DE</p>
+                        <p>Nike Presto Air</p>
+                        <p class="amount">$ 150</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/1p.png" alt="img">
                         <p>Nike white</p>
+                        <p class="amount">$ 100</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/2p.png" alt="img">
                         <p>Haurache Run Ultra DM</p>
+                        <p class="amount">$ 280</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                 </div>
@@ -58,43 +62,51 @@
                     <div class="product-services-img-1">
                         <img src="images/products/3p.png" alt="img">
                         <p>Under Armuor Vixs DT</p>
+                        <p class="amount">$ 350</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/4p.png" alt="img">
                         <p>Nike Air Haurache</p>
+                        <p class="amount">$ 550</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/5p.png" alt="img">
                         <p>Nike Supreme Dot</p>
+                        <p class="amount">$ 300</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/6p.png" alt="img">
                         <p>Nike Air Blue</p>
+                        <p class="amount">$ 550</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                 </div>
                 <div class="product-images-1">
                     <div class="product-services-img-1">
                         <img src="images/products/7p.png" alt="img">
-                        <p>Under Armuor 7000 DE</p>
+                        <p>Under Armuor</p>
+                        <p class="amount">$ 600</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/8p.png" alt="img">
                         <p>Jordan Air</p>
+                        <p class="amount">$ 40</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/14p.png" alt="img">
                         <p>Jordan 9 Boot</p>
+                        <p class="amount">$ 500</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                     <div class="product-services-img-1">
                         <img src="images/products/9p.png" alt="img">
                         <p>Adidas Alphabounce</p>
+                        <p class="amount">$ 550</p>
                         <button class="btn-custom" onclick="myFunction()">Buy Now</button>
                     </div>
                 </div>
